--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -119,3 +119,5 @@ feature.secure-doc-store.enabled: ${SECURE_DOC_STORE_FEATURE:false}
 case_document_am.url=${CASE_DOCUMENT_AM_URL:}
 
 dwp.response.due.days=${DWP_RESPONSE_DUE_DAYS:35}
+
+logging.level.uk.gov.hmcts.fortifyclient=INFO
